# Termtrix-Sentinel

./: .env.example  .gitignore  Dockerfile.worker  LICENSE  Makefile  README.md  docker-compose.yml  my_sites.conf  pyproject.toml  quick_test.txt  script.sh  starter.sh
backend/app/: config.py  main.py
backend/app/schemas/: whois_loopup_response_schema.py
mcp_servers/threat_intel/: requirements.txt  server.py
mcp_servers/threat_intel/tools/: whois.py
observability/: vector.yaml
sentinel/: Dockerfile  requirements.txt
sentinel/app/: config.py  dependencies.py  lifespan.py  logger.py  main.py
sentinel/app/api/: action.py  enrichment.py  health.py  internal_logs.py
sentinel/app/core/: graph.py  mcp_client.py  model.py  redis.py
sentinel/app/models/: action.py  approval.py
sentinel/app/prompts/: triage.py
sentinel/app/schemas/: triage.py
sentinel/app/services/: action_planner.py
sentinel/app/storage/: approvals.py  tool_storage.py
sentinel/app/workflows/: enrichment_graph.py
sentinel/detection_engine/: NGINX_RULES.json  detection_consumer.py  nginx_rules.py  termtrix_detection_engine.py  yaml_to_dict.py
sentinel/mcp_server/: __init__.py
sentinel/mcp_server/threat_intel/: __init__.py  mcp_instance.py  server.py
sentinel/observability/: vector.yaml
sentinel/workflows/: action_graph.py  enrichment_graph.py  nodes.py  ref.txt  state.py
sentinel/workflows/core/: state.py
termtrix_common/: pyproject.toml
termtrix_common/termtrix_common/: redis_client.py
worker/: clickhouse_writer.py  consumer.py  normailzer.py  serializer.py  storage.py
(+17 files in other folders)
