[build-system]
requires = ["setuptools>=77.0.3"]
build-backend = "setuptools.build_meta"

[project]
name = "termtrix-common"
version = "0.1.0"
description = "Shared utilities for Termtrix"

dependencies = [
  "redis",
  "clickhouse-connect",
  "python-dateutil"
]

[tool.setuptools.packages.find]
where = ["."]
